string non printable characters for some comments.
refactor trackback to share more code